[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/scenes/Track/track.gd" type="Script" id=1]
[ext_resource path="res://src/scenes/Track/concrete_tex.png" type="Texture" id=2]
[ext_resource path="res://src/scenes/Track/HUD.tscn" type="PackedScene" id=3]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 50, 1, 50 )

[sub_resource type="SpatialMaterial" id=2]
albedo_texture = ExtResource( 2 )

[sub_resource type="ConcavePolygonShape" id=3]
data = PoolVector3Array( -25, 0.5, 25, 25, 0.5, 25, -25, -0.5, 25, 25, 0.5, 25, 25, -0.5, 25, -25, -0.5, 25, 25, 0.5, -25, -25, 0.5, -25, 25, -0.5, -25, -25, 0.5, -25, -25, -0.5, -25, 25, -0.5, -25, 25, 0.5, 25, 25, 0.5, -25, 25, -0.5, 25, 25, 0.5, -25, 25, -0.5, -25, 25, -0.5, 25, -25, 0.5, -25, -25, 0.5, 25, -25, -0.5, -25, -25, 0.5, 25, -25, -0.5, 25, -25, -0.5, -25, 25, 0.5, 25, -25, 0.5, 25, 25, 0.5, -25, -25, 0.5, 25, -25, 0.5, -25, 25, 0.5, -25, -25, -0.5, 25, 25, -0.5, 25, -25, -0.5, -25, 25, -0.5, 25, 25, -0.5, -25, -25, -0.5, -25 )

[node name="Spatial" type="Spatial"]
script = ExtResource( 1 )

[node name="CanvasLayer" parent="." instance=ExtResource( 3 )]

[node name="ground" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="StaticBody" type="StaticBody" parent="ground"]

[node name="CollisionShape" type="CollisionShape" parent="ground/StaticBody"]
shape = SubResource( 3 )

[node name="ScoreTimer" type="Timer" parent="."]
one_shot = true

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="StartPosition" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.738426, 0 )

[node name="Camera" type="Camera" parent="."]
current = true

[connection signal="gameplay_entered" from="." to="." method="_on_Spatial_gameplay_entered"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="gameplay_entered" from="StartPosition" to="." method="_on_StartPosition_gameplay_entered"]
